Footer spacing fixed.

--- a/wgxhw3/css/main.css
+++ b/wgxhw3/css/main.css
@@ -164,7 +164,8 @@ footer li {
 
 }
 .twitter {
-
+    position: relative;
+    bottom: 1px;
 }
 .instagram {
 
